tests/paczka1/fuzzy1/34647800.err
Error in line 2: rw3CuRA A802 64,3
Error in line 7: cJJ A229 72,1
Error in line 20: vW0OFKj5 A945 93,3
Error in line 24: A229 A945 64,9
Error in line 28: A229 S284 32,7
Error in line 26: cJJ A945 52,0
Error in line 23: vW0OFKj5 S284 15,2
Error in line 37: ciXbL2Qd0 S284 244,3
Error in line 29: A229 A945 10,2
